got the token refresh to work for the first time. need to iron out the auth code part -- it only works once because the auth code is one-time use.

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 client_id="135951"
 client_secret="46965ce118254df90f540bdc8abbf88de8130cf3"
-auth_code="095cc8fe2f33ff45b1aa8e462b8b364d9c30563e"
+auth_code="2c5f8cc7190264da89b504c99c9989a90c3d7390"
+refresh_token="6acf7fb4b63b6b3665863a00929247876949956a"
