first pass at auth prompt working

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 client_id="135951"
 client_secret="46965ce118254df90f540bdc8abbf88de8130cf3"
-auth_code="8681ccf928fc71b7de4ba9aadeaf2216725df392"
+auth_code="f0606d016fc7bc471b79d84fe0e8dc6f98d44427"
+redirect_URI="http://localhost/exchange_token"
+scope="read_all,profile:read_all,activity:read_all"
