--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@ client_id="your_client_id"
 client_secret="your_client_secret"
 redirect_URI="http://localhost/exchange_token"
 scope="read_all,profile:read_all,activity:read_all"
+token_file = 'strava_tokens.json' 
+activities_url = "https://www.strava.com/api/v3/athlete/activities"
+last_fetched_file = 'last_fetched.json' 
