--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ scope="read_all,profile:read_all,activity:read_all"
 token_file = 'strava_tokens.json' 
 activities_url = "https://www.strava.com/api/v3/athlete/activities"
 last_fetched_file = 'last_fetched.json' 
+token_url = "https://www.strava.com/oauth/token"
