fixing env file

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ activities_url = "https://www.strava.com/api/v3/athlete/activities"
 last_fetched_file = 'last_fetched.json' 
 token_url = "https://www.strava.com/oauth/token"
 base_url = "https://www.strava.com/oauth/authorize"
+client_id = "your_client_id_here"
+client_secret = 'your_secret_here'
